[package]
name = "benchmark_rl"
version = "0.1.0"
authors = ["Verdagon <verdagon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2"
printf = "0.1.0"
rustc-hash = "1.0.1"
ncurses = "5.86.0"
derive-new = "0.5"
crossterm = "0.17"
downcast-rs = "1.2.0"
atoi = "0.3.2"